methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail: error: too many arguments for method hunt: ()Unit
		hunt(getParam(0).asInstanceOf[Color]); 
                    ^SlugSnail:4: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
      if(isFacingTrail()) {
                      ^SlugSnail:8: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
        if (isFacingTrail()) {
                         ^