methods.slug.SlugSnail.scala.code
def hunt() {
    while(estSurBiscuit == false) {
      if(isFacingTrail()) {
        avance()
      } else {
        gauche()
        if (isFacingTrail()) {
          avance()
        } else {
          droite()
          droite()
          avance()
        }
      }
      baisseBrosse()
      leveBrosse()
    }
  prendBiscuit()
}

def isFacingTrail(c:Color):Boolean = {
  if (estFaceMur())
    return false
  avance()
  if (getCouleurSol() == c) {
    recule()
    return true
  }
  recule()
  return false
}